--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1439,10 +1439,10 @@
                       <strong>{{ _('What does this number mean for my health?') }}</strong>
                   </p>
                   <p>
-                      {{ _('This number reflects the variety of Bacteria and Archaea present in your gut at the time of testing. Currently, there\'s no single established standard for how gut microbiome diversity relates to health. While some studies suggest a potential link between higher diversity and specific health benefits, more research is needed to understand this connection.') }}
+                      {{ _('This number reflects the variety of Bacteria and Archaea observed in your fecal specimen at the time of testing. Currently, there\'s no standard for how gut microbiome diversity relates to health. While some studies suggest a potential link between higher diversity and specific health benefits, that is not true universally -- more research is needed to understand the relationship. For example, it may be that the specific microbes present are more important than having many different types of microbes, much like how in a garden you care about the exact plants growing not that there is a random assortment of plants.') }}
                   </p>
                   <p>
-                      {{ _('It\'s important to remember that everyone\'s gut microbiome is unique. If your score differs from the average, it doesn\'t necessarily indicate a health concern.') }}
+                      {{ _('It\'s important to remember that everyone\'s gut microbiome is unique and changing overtime. If your score differs from the average, it doesn\'t necessarily indicate a health concern.') }}
                   </p>
                   <div class="card your_sample_diversity_inset">
                       <div class="card-header">{{ _('Your sample\'s diversity value:') }}</div>
