--- a/microsetta_interface/templates/home.jinja2
+++ b/microsetta_interface/templates/home.jinja2
@@ -13,6 +13,10 @@
         background-color: #f1f1f2;
         padding:2rem;
     }
+    .sbi-logo {
+        max-width: 300px;
+        height: auto;
+    }
 </style>
 {% endblock %}
 
@@ -22,8 +26,12 @@
           <div class="row h-25"></div>
           <div class="row h-50">
               <div class="col d-flex flex-column">
-                                       <div class="flex-fill">
-                      <img src="/static/img/{{ _(EN_US_KEY) }}/the-microsetta-initiative-logo-rgb-1.png"  srcset="/static/img/{{ _(EN_US_KEY) }}/the-microsetta-initiative-logo-rgb-1@2x.png 2x,/static/img/{{ _(EN_US_KEY) }}/the-microsetta-initiative-logo-rgb-1@3x.png 3x" />
+                    <div class="flex-fill">
+                      {% if request.args.get('project') == 'sbi' %}
+                          <img class="sbi-logo" src="/static/img/sbi-logo.png" alt="SBI Logo" />
+                      {% else %}
+                          <img src="/static/img/{{ _(EN_US_KEY) }}/the-microsetta-initiative-logo-rgb-1.png"  srcset="/static/img/{{ _(EN_US_KEY) }}/the-microsetta-initiative-logo-rgb-1@2x.png 2x, /static/img/{{ _(EN_US_KEY) }}/the-microsetta-initiative-logo-rgb-1@3x.png 3x" />
+                      {% endif %}
                   </div>
 
                   <div class="flex-fill mt-3">
