changle alt text
Co-authored-by: Cassidy Symons <83246693+cassidysymons@users.noreply.github.com>

--- a/microsetta_interface/templates/home.jinja2
+++ b/microsetta_interface/templates/home.jinja2
@@ -28,7 +28,7 @@
               <div class="col d-flex flex-column">
                     <div class="flex-fill">
                       {% if request.args.get('project') == 'sbi' %}
-                          <img class="sbi-logo" src="/static/img/sbi-logo.png" alt="SBI Logo" />
+                          <img class="sbi-logo" src="/static/img/sbi-logo.png" alt="Skin Biome Initiative Logo" />
                       {% else %}
                           <img src="/static/img/{{ _(EN_US_KEY) }}/the-microsetta-initiative-logo-rgb-1.png"  srcset="/static/img/{{ _(EN_US_KEY) }}/the-microsetta-initiative-logo-rgb-1@2x.png 2x, /static/img/{{ _(EN_US_KEY) }}/the-microsetta-initiative-logo-rgb-1@3x.png 3x" />
                       {% endif %}
