change font weight from bold to normal

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -244,7 +244,7 @@
 
     .nav-tabs .nav-link.active {
         color: #222222;
-        font-weight: bold;
+        font-weight: normal;
     }
 
     .highlight-bar {
